webpack config for vendros,new pages

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -6,6 +6,5 @@
   padding: 20px 0;
   display: flex;
   box-sizing: border-box;
-  justify-content: flex-end;
-
+  justify-content: space-between;
 }
